--- a/LogSearcher/Views/MainWindow.xaml
+++ b/LogSearcher/Views/MainWindow.xaml
@@ -8,16 +8,18 @@
         mc:Ignorable="d"
         Background="Gray"
         Title="LogSearcher" Height="450" Width="800">
-    
+
     <Window.Resources>
         <DataTemplate x:Key="FoundFilesView">
             <StackPanel Orientation="Horizontal">
-                <CheckBox x:Name="Selected"/>
+                <CheckBox x:Name="Selected" 
+                          Margin="0 0 5 0"
+                          IsChecked="{Binding Marked}"/>
                 <TextBlock Text="{Binding FileName}"/>
             </StackPanel>
         </DataTemplate>
     </Window.Resources>
-    
+
     <Window.DataContext>
         <viewmodels:MainViewModel/>
     </Window.DataContext>
@@ -54,8 +56,8 @@
         <TextBox Text ="{Binding Path=InputSearchString}"
                  Grid.Row="1" 
                  Grid.Column="2" 
-                 Grid.ColumnSpan="3"
-                 Margin="0 0 0 5"/>
+                 Grid.ColumnSpan="4"                 
+                 Margin="0 0 10 5"/>
 
         <!-- Input filename/extension -->
         <TextBlock Grid.Row="2" Grid.Column="1"
@@ -68,8 +70,8 @@
         <TextBox Text="{Binding Path=InputExtension}"
                  Grid.Row="2" 
                  Grid.Column="2" 
-                 Grid.ColumnSpan="3"
-                 Margin="0 0 0 25"
+                 Grid.ColumnSpan="4"
+                 Margin="0 0 10 25"
                  MinWidth="200"/>
 
         <!-- Input folders to search -->
@@ -103,8 +105,8 @@
                   Grid.Row="5" Grid.Column="1"
                   Grid.ColumnSpan="5"
                   Margin="0 0 10 0"
-                  MinHeight="100"     
-                  ></ListView>
+                  MinHeight="100">
+        </ListView>
 
         <!-- Reset list of search-folders -->
         <Button Command="{Binding ResetSourceFolderDisplayButton}"
@@ -112,22 +114,24 @@
                 Margin="0 10 10 10"
                 Grid.ColumnSpan="2"
                 HorizontalAlignment="Right"
-                MaxHeight="20"
-                >Reset</Button>
+                MaxHeight="20">
+            Reset
+        </Button>
 
         <!-- Copy files to folder -->
         <TextBlock Grid.Row="7" Grid.Column="1"
-                   Margin="0 10 0 0"
-                   >Target folder:</TextBlock>
+                   Margin="0 10 0 0">
+                   Target folder:
+        </TextBlock>
         <TextBox Text="{Binding Path=InputTargetFolder}"
                  Grid.Row="7" 
                  Grid.Column="2"
-                 Grid.ColumnSpan="3"
-                 Margin="0 10 0 0"
-                 ></TextBox>
-        <Button Grid.Row="7" Grid.Column="5"
+                 Grid.ColumnSpan="4"
+                 Margin="0 10 10 0">
+        </TextBox>
+        <!--<Button Grid.Row="7" Grid.Column="5"
                 IsEnabled="False"
-                Margin="5 10 10 0">Set</Button>
+                Margin="5 10 10 0">Set</Button>-->
 
         <!-- Execute search -->
         <Button Command="{Binding GoSearch}"
@@ -135,15 +139,17 @@
                 Grid.Column="2"
                 Grid.ColumnSpan="2"
                 Background="Green"                
-                Margin="0 20 0 20">SEARCH</Button>
+                Margin="0 20 0 20">
+            SEARCH
+        </Button>
 
 
 
         <!-- Display list of found files-->
         <TextBlock Text="{Binding SearchStatus}"
                    Grid.Row="1"
-                   Grid.Column="6"
-                   ></TextBlock>
+                   Grid.Column="6">
+        </TextBlock>
         <ListView x:Name="FoundFiles"
                   ItemsSource="{Binding HitList}"                   
                   ItemTemplate="{StaticResource FoundFilesView}"
@@ -157,14 +163,15 @@
                   VerticalAlignment="Top"
                   MinWidth="180"
                   MaxHeight="215"
-                  MinHeight="200"
-                  />
-        <!--DisplayMemberPath="FileName" -->
+                  MinHeight="200">
+        </ListView>
+            <!--DisplayMemberPath="FileName" -->
         <TextBox Text="{Binding FileContent}"
                  Grid.Row="7" 
                  Grid.Column="6"                 
                  Grid.ColumnSpan="2"                    
-                 Margin="0 10 10 0"></TextBox>
+                 Margin="0 10 10 0">
+        </TextBox>
 
         <!--Use Notepad++ ?-->
         <StackPanel Grid.Row="6" Grid.Column="6"    
@@ -173,24 +180,25 @@
             <Button Command="{Binding OpenFileButton}"
                     Margin="0 20 20 20 "
                     MaxWidth="70"
-                    HorizontalAlignment="Left"
-                    >Open File</Button>
+                    HorizontalAlignment="Left">
+                Open File
+            </Button>
             <TextBlock Margin="0 23 5 0">
                     Use Notepad++:
             </TextBlock>
             <CheckBox IsChecked="{Binding Path=SelectUseNPP, Mode=TwoWay}"
-                      Margin="0 23 5 0">                
+                      Margin="0 23 5 0">
             </CheckBox>
-            <Button Command="{Binding Path=CopyAllButton}"
-                    
-                    Margin="20 23 5 20"
-                    >Copy All</Button>
+            <Button Command="{Binding Path=CopyAllButton}"                    
+                    Margin="20 23 5 20">
+                Copy All
+            </Button>
             <Button Command="{Binding Path=CopySelectedButton}"
-                    CommandParameter="{Binding ElementName=FoundFiles, Path=SelectedItems}"
-                   
-                    Margin="20 23 5 20"
-                >Copy Selected</Button>
-                    
+                    CommandParameter="{Binding ElementName=FoundFiles, Path=SelectedItems}"                   
+                    Margin="20 23 5 20">
+                Copy Selected
+            </Button>
+
         </StackPanel>
 
     </Grid>
