--- a/LogSearcher/Views/MainWindow.xaml
+++ b/LogSearcher/Views/MainWindow.xaml
@@ -37,63 +37,58 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="10"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="10"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="10"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
 
-        <!-- Input Search Text-->
-        <TextBlock Grid.Row="1" Grid.Column="1">Find in file:</TextBlock>
-        <TextBox Text ="{Binding Path=InputSearchString}"
-                 Grid.Row="1" 
-                 Grid.Column="2" 
-                 Grid.ColumnSpan="4"                 
-                 Margin="0 0 10 5"/>
+        <!-- SearchInput /  SourceFolder Management -->
+        <StackPanel Grid.Row="1" Grid.Column="1">
 
-        <!-- Input filename/extension -->
-        <TextBlock Grid.Row="2" Grid.Column="1"
-                   >Filename:</TextBlock>
-        <TextBlock Grid.Row="2" Grid.Column="4"
-                   VerticalAlignment="Bottom"
-                   HorizontalAlignment="Right"
-                   Margin="0 0 0 10"
-                   >(use * or ?)</TextBlock>
-        <TextBox Text="{Binding Path=InputExtension}"
-                 Grid.Row="2" 
-                 Grid.Column="2" 
-                 Grid.ColumnSpan="4"
-                 Margin="0 0 10 25"
-                 MinWidth="200"/>
+            <!-- Input Search Text-->
+            <StackPanel >
+                <!-- Find in File -->
+                <StackPanel Orientation="Vertical">
+                    <TextBlock>Find in file:</TextBlock>
+                    <TextBox Text ="{Binding Path=InputSearchString}"/>
+                </StackPanel>
+                <StackPanel Orientation="Vertical">
+                    <!-- filename/extension -->
+                    <TextBlock>Filename:</TextBlock>
+                    <TextBlock>(use * or ?)</TextBlock>
+                    <TextBox Text="{Binding Path=InputExtension}"/>
+                </StackPanel>
+            </StackPanel>
+
+            <!-- Heading & Add button-->
+            <StackPanel>
+                <TextBlock>Source folder:</TextBlock>
+                <TextBox Text="{Binding Path=InputSourceFolder, Mode=TwoWay}"/>
+            </StackPanel>
+
+            <!-- InputString & ... button -->
+            <StackPanel>
+
+                <Button Command="{Binding OpenSourceFolderButton}">...</Button>
+            </StackPanel>
+
+            <!-- HistoryDrop & UseHist button-->
+            <StackPanel></StackPanel>
+
+        </StackPanel>
+
+
+
 
         <!-- Input folders to search -->
-        <TextBlock Grid.Row="3" Grid.Column="1"
-                   >Source folder:</TextBlock>
-        <TextBox Text="{Binding Path=InputSourceFolder, Mode=TwoWay}"
-                 Grid.Row="3" Grid.Column="2"                  
-                 Grid.ColumnSpan="3"/>
-        <Button Command="{Binding OpenSourceFolderButton}"
-                Grid.Column="5" Grid.Row="3"
-                Margin="5 0 10 0"
-                MinWidth="20"
-                HorizontalAlignment="Left"
-                >...</Button>
+
+
         <StackPanel Grid.Row="4" 
                 Grid.Column="2" 
                 Orientation="Horizontal">
@@ -143,7 +138,7 @@
         </Button>
 
 
-        <!-- Copy files to folder -->        
+        <!-- Define target folder -->        
         <TextBlock Grid.Row="7" Grid.Column="1"
                    Margin="0 10 0 0">
                    Target folder:
@@ -205,8 +200,9 @@
                   MinWidth="180"
                   MaxHeight="215"
                   MinHeight="200">
-        </ListView>
-        <!--DisplayMemberPath="FileName" -->
+        </ListView>    
+        
+        <!-- Selected FoundFile info -->
         <StackPanel Grid.Row="7" Grid.Column="6" Grid.ColumnSpan="2" >
             <TextBlock>1st found line:</TextBlock>
             <TextBox Text="{Binding FileContent}" TextWrapping="Wrap"                     
